--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,24 @@
   </head>
 
   <body>
+    <ul>
+      <% if user_signed_in? %>
+  <li><%= link_to "FAQs", faqs_path %></li>
+<% else %>
+  <li><%= link_to "Sign Up", new_user_registration_path %></li>
+  <li><%= link_to "Sign In", new_user_session_path %></li>
+  <li><%= link_to "Sign Out", destroy_user_session_path, method: "delete" %></li>
+<% end %>
+      <li><%= link_to "Home", home_path %></li>
+      <li><%= link_to "About", about_path %></li>
+      <li><%= link_to "Cities", cities_path %></li>
+    </ul>
+  	<% if notice %>
+		  <p class="alert alert-success"><%= notice %></p>
+	  <% end %>
+	  <% if alert %>
+		  <p class="alert alert-danger"><%= alert %></p>
+	  <% end %>
     <%= yield %>
   </body>
 </html>
