--- a/app/views/client/index.html.erb
+++ b/app/views/client/index.html.erb
@@ -12,17 +12,14 @@
   <body ng-app="project5">
     <nav>
       <ul>
-      <% if user_signed_in? %>
-  <li><%= link_to "Cities", cities_path %></li>
-<% else %>
-  <li><%= link_to "Sign Up", new_user_registration_path %></li>
-  <li><%= link_to "Sign In", new_user_session_path %></li>
-  <li><%= link_to 'Sign out', destroy_user_session_path, method: 'delete', target: '_self' %></li>
-<% end %>
-      <li><%= link_to "Home", home_path %></li>
-      <li><%= link_to "About", about_path %></li>
-      <li><%= link_to "Cities", cities_path %></li>
-    </ul>
+        <li><%= link_to "Home", root_path %></li>
+        <% if user_signed_in? %>
+          <li><%= link_to 'Sign out', destroy_user_session_path, method: 'delete', target: '_self' %></li>
+        <% else %>
+          <li><%= link_to "Sign Up", new_user_registration_path, target: '_self' %></li>
+          <li><%= link_to "Sign In", new_user_session_path, target: '_self' %></li>
+        <% end %>
+      </ul>
       
     </nav>
 
