--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,4 +43,15 @@
 .quote {
 	font-size: 20px;
 	font-family: 'Raleway', sans-serif;
+	color: #0275d8;
+}
+/*.navbar-brand {
+	font-family: 'Raleway', sans-serif;
+	color: #00ffba;
+	font-size: 25px;
+}*/
+.logout, .login, .logup, .home {
+	padding: 10px;
+	font-family: 'Raleway', sans-serif;
+	color: #00ffba;
 }
