--- a/app/views/client/index.html.erb
+++ b/app/views/client/index.html.erb
@@ -11,18 +11,33 @@
   </head>
 
   <body ng-app="project5">
+
+ 
     
-      <ul>
-        <li><%= link_to "Home", root_path %></li>
+     <!--  <ul class="nav nav-pills right"> 
+        <li><%= link_to "Home", root_path %></li> 
         <% if user_signed_in? %>
-          <li><%= link_to 'Sign out', destroy_user_session_path, method: 'delete', target: '_self' %></li>
+          <li><%= link_to 'Sign out', destroy_user_session_path, method: 'delete', target: '_self' %></li>   
         <% else %>
-          <li><%= link_to "Sign Up", new_user_registration_path, target: '_self' %></li>
+          <li><%= link_to "Sign Up", new_user_registration_path, target: '_self' %></li> 
           <li><%= link_to "Sign In", new_user_session_path, target: '_self' %></li>
         <% end %>
           
-      </ul>
+      </ul> -->
+ 
       
+   
+<ul class="nav nav-tabs">
+  <li class="home" role="presentation"><%= link_to "Home", root_path %></li>
+  <li class="logout"><%= link_to 'Sign out', destroy_user_session_path, method: 'delete', target: '_self' %></li>
+  <li class="logup" role="presentation"><%= link_to "Sign Up", new_user_registration_path, target: '_self' %></li>
+  <li class="login" role="presentation"><%= link_to "Sign In", new_user_session_path, target: '_self' %></li>
+
+</ul>
+  
+  
+
+ 
   
     
   
