added sign in condition to button

--- a/app/assets/javascripts/components/homePage/homePage.html
+++ b/app/assets/javascripts/components/homePage/homePage.html
@@ -9,8 +9,9 @@
         <br>
         <p class="quote">“Consume less; share better.” 
            ― Hervé Kempf</p>
-        <button class="btn btn-default orange accent-4 text-white" type="button" ui-sref="posts">go to your feed</button>
-           
+         
+        <!-- <button class="btn btn-default orange accent-4 text-white" type="button" ui-sref="posts">go to your feed</button> -->
+          
           
         <!-- <div class="buttons">
          <button class="btn btn-success btn-lg">Sign Up</button>
@@ -19,3 +20,13 @@
 
       </div>
 </div>
+ <!--  <ul class="nav nav-pills right"> 
+        <li><%= link_to "Home", root_path %></li> 
+        <% if user_signed_in? %>
+          <li><%= link_to 'Sign out', destroy_user_session_path, method: 'delete', target: '_self' %></li>   
+        <% else %>
+          <li><%= link_to "Sign Up", new_user_registration_path, target: '_self' %></li> 
+          <li><%= link_to "Sign In", new_user_session_path, target: '_self' %></li>
+        <% end %>
+          
+      </ul> -->
