--- a/app/assets/javascripts/components/posts/posts.html
+++ b/app/assets/javascripts/components/posts/posts.html
@@ -13,7 +13,7 @@
   <div ng-repeat="post in $ctrl.posts | filter:searchBox" class="row">
    <div class="row">
     <div class="col s12 m6 l3">
-      <div class="card" ui-sref="postsEdit({id: $ctrl.post.id})" style="width: 30em;">
+      <div class="card" style="width: 30em;">
       <div style="margin: 35px;">
 
          <span class="card-title blue-text text-darken-3"><strong>{{ post.title }}</strong></span>
