added new business form

--- a/app/assets/javascripts/components/businessesNew/businessesNew.html
+++ b/app/assets/javascripts/components/businessesNew/businessesNew.html
@@ -11,12 +11,32 @@
   <textarea ng-model="$ctrl.newBusiness.description"></textarea>
   <br/>
   <br/>
-  <label>Photo</label>
+  <label>Street</label>
+  <input ng-model="$ctrl.newBusiness.street" />
+  <br/>
+  <br/>
+  <label>City</label>
+  <input ng-model="$ctrl.newBusiness.city" />
+  <br/>
+  <br/>
+  <label>Zipcode</label>
+  <input ng-model="$ctrl.newBusiness.zipcode" />
+  <br/>
+  <br/>
+  <label>longitude</label>
+  <input ng-model="$ctrl.newBusiness.longitude" />
+  <br/>
+  <br/>
+  <label>latitude</label>
+  <input ng-model="$ctrl.newBusiness.latitude" />
+  <br/>
+  <br/>
+  <label>photourl</label>
   <input ng-model="$ctrl.newBusiness.photourl" />
   <br/>
   <br/>
-  <label>Address</label>
-  <input ng-model="$ctrl.newBusiness.address" />
+  <label>website</label>
+  <input ng-model="$ctrl.newBusiness.website" />
   <br/>
   <br/>
   <button class="btn btn-default green text-white" style="margin-bottom: 20px" ng-click="$ctrl.saveBusiness()">Save</button>
