working link to show page on business model

--- a/app/assets/javascripts/components/businesses/businesses.html
+++ b/app/assets/javascripts/components/businesses/businesses.html
@@ -18,6 +18,7 @@
           <p>{{ business.description }}</p>
           <a href="{{ business.website }}">Visit website</a>
           <p>{{ business.city }}, {{business.state}}</p>
+          <a ui-sref="businessesShow({ id: business.id})">find out more</a>
           </div>
        </div>
       </div>
