--- a/app/assets/javascripts/components/businessesShow/businessesShow.html
+++ b/app/assets/javascripts/components/businessesShow/businessesShow.html
@@ -15,7 +15,8 @@
           <p>{{ $ctrl.business.city }}, {{ $ctrl.business.state }}</p>
          
           <a href="{{ $ctrl.business.website}}">Visit website</a>
-          
+          <br>
+          <button class="btn default"><a ui-sref="businesses">back to stores</a></button>
          </div>
          
         </div>
